# crf-chain1

./: README.md  crf-chain1.cabal  crf.cabal  package.yaml  stack.yaml
Data/: CRF.hs
Data/CRF/: Codec.hs  Core.hs  DP.hs  External.hs  Feature.hs  Gradient.hs  Inference.hs  Labeled.hs  Model.hs  Train.hs  Util.hs
Data/CRF/Chain1/: Inference.hs  Model.hs  Train.hs
Data/CRF/Chain1/Dataset/: Codec.hs  External.hs  Internal.hs
Data/CRF/Chain1/Feature/: Present.hs
Data/CRF/Dataset/: Codec.hs  External.hs  Internal.hs
Data/CRF/FeatSel/: Hidden.hs  Present.hs
Data/CRF/Feature/: Hidden.hs  Present.hs
src/Data/CRF/: Chain1.hs
src/Data/CRF/Chain1/: DP.hs  Feature.hs  Model.hs  Train.hs  Util.hs
src/Data/CRF/Chain1/Dataset/: Codec.hs  External.hs  Internal.hs
src/Data/CRF/Chain1/Feature/: Hidden.hs
