name:               crf-chain1
version:            0.2.0
synopsis:           First-order, linear-chain conditional random fields
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
homepage:           https://github.com/kawu/crf
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5
      , containers
      , vector
      , array
      , random
      , parallel
      , logfloat
      , monad-codec >= 0.2 && < 0.3
      , binary
      , vector-binary
      , data-lens
      , sgd >= 0.2.1 && < 0.3

    exposed-modules:
        Data.CRF.Chain1
      , Data.CRF.Chain1.Dataset.Internal
      , Data.CRF.Chain1.Dataset.External
      , Data.CRF.Chain1.Dataset.Codec
      , Data.CRF.Chain1.Feature
      , Data.CRF.Chain1.Feature.Present
      , Data.CRF.Chain1.Feature.Hidden
      , Data.CRF.Chain1.Model
      , Data.CRF.Chain1.Inference
      , Data.CRF.Chain1.Train

    other-modules:
        Data.CRF.Chain1.DP
        Data.CRF.Chain1.Util

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/crf.git
