name:               crf
version:            0.2.0
synopsis:           Linear-chain conditional random fields
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
homepage:           https://github.com/kawu/crf
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5
      , containers
      , vector
      , array
      , random
      , parallel
      , logfloat
      , monad-codec
      , binary
      , vector-binary
      , data-lens
      , sgd

    exposed-modules:
        Data.CRF
      , Data.CRF.Core
      , Data.CRF.External
      , Data.CRF.Codec
      , Data.CRF.Feature
      , Data.CRF.Feature.Present
      , Data.CRF.Feature.Hidden
      , Data.CRF.Model
      , Data.CRF.Train
      , Data.CRF.Inference

    other-modules:
        Data.CRF.DP
        Data.CRF.Util

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/crf.git
