name:               crf
version:            0.2.0
synopsis:           Linear-chain conditional random fields
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
homepage:           https://github.com/kawu/crf
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5
      , containers
      , vector
      , array
      , random
      , parallel
      , logfloat
      , monad-codec >= 0.2 && < 0.3
      , binary
      , vector-binary
      , data-lens
      , sgd >= 0.2.1 && < 0.3

    exposed-modules:
        Data.CRF
      , Data.CRF.Dataset.Internal
      , Data.CRF.Dataset.External
      , Data.CRF.Dataset.Codec
      , Data.CRF.Feature
      , Data.CRF.Feature.Present
      , Data.CRF.Feature.Hidden
      , Data.CRF.Model
      , Data.CRF.Inference
      , Data.CRF.Train

    other-modules:
        Data.CRF.DP
        Data.CRF.Util

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/crf.git
